Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18241

Downgrade from 10.4 to 10.3 crashes

    XMLWordPrintable

Details

    Description

      While we do not expect downgrade between major versions to work, it would be nice if downgrade failed with an error message rather than crash in SIGSEGV.

      After I fixed a trivial bug in the InnoDB redo log format check, I would encounter a SIGSEGV outside InnoDB.

      ./mtr --manual-gdb innodb.101_compatibility
      

      The test will kill and also normally restart the server. On a normal restart, issue the file command in gdb in order to start up with 10.3 instead. Possibly, also do show args and pass edited arguments to run, to include --lc-messages-dir pointing to 10.3 instead of 10.4.

      Whether or not I adjusted --lc-messages-dir, I would get a SIGSEGV within the following stack trace:

      10.3 8655592ae544dc52b658b41ec85f9d552ec53258

      #7  0x00000000006cd0a9 in acl_get (host=0x0, ip=0x0, user=0x2a49c68 "", 
          db=0x2a70be8 "mysql", db_is_pattern=0 '\000')
          at /mariadb/10.3/sql/sql_acl.cc:2857
      #8  0x00000000007569bb in mysql_change_db (thd=0x2a47ec8, 
          new_db_name=0x7fffffffb1d0, force_switch=true)
          at /mariadb/10.3/sql/sql_db.cc:1532
      #9  0x0000000000756fe8 in mysql_opt_change_db (thd=0x2a47ec8, 
          new_db_name=0x7fffffffb1d0, saved_db_name=0x7fffffff9b80, 
          force_switch=true, cur_db_changed=0x7fffffff9b7f)
          at /mariadb/10.3/sql/sql_db.cc:1639
      #10 0x00000000008f16a2 in mysql_make_view (thd=0x2a47ec8, share=0x27e0dd0, 
          table=0x7fffffffafa8, open_view_no_parse=false)
          at /mariadb/10.3/sql/sql_view.cc:1357
      #11 0x00000000007041bd in open_table (thd=0x2a47ec8, 
          table_list=0x7fffffffafa8, ot_ctx=0x7fffffffab50)
          at /mariadb/10.3/sql/sql_base.cc:1889
      #12 0x0000000000708da0 in open_and_process_table (thd=0x2a47ec8, 
          lex=0x2a4bb18, tables=0x7fffffffafa8, counter=0x7fffffffac0c, flags=2048, 
          prelocking_strategy=0x7fffffffac80, has_prelocking_list=false, 
          ot_ctx=0x7fffffffab50) at /mariadb/10.3/sql/sql_base.cc:3596
      #13 0x00000000007077d0 in open_tables (thd=0x2a47ec8, options=..., 
          start=0x7fffffffac20, counter=0x7fffffffac0c, flags=2048, 
          prelocking_strategy=0x7fffffffac80) at /mariadb/10.3/sql/sql_base.cc:4119
      #14 0x000000000070c125 in open_and_lock_tables (thd=0x2a47ec8, options=..., 
          tables=0x7fffffffafa8, derived=false, flags=2048, 
          prelocking_strategy=0x7fffffffac80) at /mariadb/10.3/sql/sql_base.cc:4996
      #15 0x00000000006b85cc in open_and_lock_tables (thd=0x2a47ec8, 
          tables=0x7fffffffafa8, derived=false, flags=2048)
          at /mariadb/10.3/sql/sql_base.h:500
      #16 0x00000000006f9d6b in Grant_tables::open_and_lock (this=0x7fffffffafa0, 
          thd=0x2a47ec8) at /mariadb/10.3/sql/sql_acl.cc:1212
      #17 0x00000000006c8573 in acl_reload (thd=0x2a47ec8)
          at /mariadb/10.3/sql/sql_acl.cc:2231
      #18 0x00000000006c8413 in acl_init (dont_read_acl_tables=false)
          at /mariadb/10.3/sql/sql_acl.cc:1657
      #19 0x000000000064a30a in mysqld_main (argc=149, argv=0x26ca1f8)
          at /mariadb/10.3/sql/mysqld.cc:6035
      #20 0x0000000000646282 in main (argc=26, argv=0x7fffffffe5a8)
          at /mariadb/10.3/sql/main.cc:25
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.