MDEV-18241 Downgrade from 10.4 to 10.3 crashes

privilege tables can never be views or temporary tables,
don't even try to open them, if they are.